adding layout links in header partial

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+      <%= render 'layouts/header' %>
       <div>
           <% flash.each do |message_type, message| %>
               <div "<%= message_type %>"> <%= message %></div>
