--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
           <% flash.each do |message_type, message| %>
               <div "<%= message_type %>"> <%= message %></div>
           <% end %>
+          </div>
           <div>
               <%= yield %>
           </div>
