--- a/app/views/todo_items/_todo_item.erb
+++ b/app/views/todo_items/_todo_item.erb
@@ -1,2 +1,23 @@
-<%= todo_item.content %>
-<%= link_to "delete", list_todo_item_path(@list, todo_item), method: :delete, data: {confirm: "Are you sure?"} %>
+<div class="row">
+    <% if todo_item.completed? %>
+        <div class="completed">
+            <%= link_to "Mark as complete",complete_list_todo_item_path(@list, todo_item.id), method: :patch  %>
+        </div>
+        <div class="todo_item">
+            <strike><%= todo_item.content %></strike>
+        </div>
+        <div class="trash">
+            <%= link_to "delete", list_todo_item_path(@list, todo_item), method: :delete, data: {confirm: "Are you sure?"} %>
+        </div>
+    <% else %>
+        <div class="completed">
+            <%= link_to "Mark as complete",complete_list_todo_item_path(@list, todo_item.id), method: :patch  %>
+        </div>
+        <div class="todo_item">
+            <%= todo_item.content %>
+        </div>
+        <div class="trash">
+            <%= link_to "delete", list_todo_item_path(@list, todo_item), method: :delete, data: {confirm: "Are you sure?"} %>
+        </div>
+    <% end %>
+</div>
