--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -11,4 +11,4 @@
 <%= render 'todo_items/form' %>
 
 <%= link_to 'Edit', edit_list_path(@list) %> |
-<%= link_to 'Back', lists_path %>
+<%= link_to 'Back', root_path %>
