creating a todo_item

--- a/app/views/shared/_list_form.html.erb
+++ b/app/views/shared/_list_form.html.erb
@@ -4,5 +4,5 @@
         <%= f.text_field :title, placeholder: "Todo Item title" %>
         <%= f.text_area :description, placeholder: "Add description..." %>
     </div>
-    <%= f.submit "Post", class: "btn btn-primary" %>
+    <%= f.submit "Post", class: "button" %>
 <% end %>
