customizing about page

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,4 @@
 <h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<p>Organization</p>
+one of the most important reasons why we would recommend this app for you is the organization.
+Organizing your tasks with a list make everything much more manageable and make you feel grounded. 
