--- a/app/views/shared/_list_form.html.erb
+++ b/app/views/shared/_list_form.html.erb
@@ -1,8 +1,11 @@
-<%= form_for(@list) do |f| %>
-    <%= render 'shared/error_messages', object: f.object %>
-    <div class="field">
-        <%= f.text_field :title, placeholder: "Todo Item title" %>
-        <%= f.text_area :description, placeholder: "Add description..." %>
-    </div>
-    <%= f.submit "Create", class: "button" %>
-<% end %>
+<div class="callout">
+    <h4>New List</h4>
+    <%= form_for(@list) do |f| %>
+        <%= render 'shared/error_messages', object: f.object %>
+        <div class="field">
+            <%= f.text_field :title, placeholder: "Todo list title" %>
+            <%= f.text_area :description, placeholder: "Add description..." %>
+        </div>
+        <%= f.submit "Create", class: "button" %>
+    <% end %>
+</div>
