deleting controller tests and writing integration tests

--- a/app/views/shared/_list_form.html.erb
+++ b/app/views/shared/_list_form.html.erb
@@ -5,6 +5,8 @@
         <div class="field">
             <%= f.text_field :title, placeholder: "Todo list title" %>
             <%= f.text_area :description, placeholder: "Add description..." %>
+            <%= f.check_box :status %>
+            <span>Private</span>
         </div>
         <%= f.submit "Create", class: "button" %>
     <% end %>
