--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -7,8 +7,8 @@
   <strong>Description:</strong>
   <%= @list.description %>
 </p>
-    <%= link_to @card.description %>
-<%= render 'cards/form' %>
+<%= render @list.todo_items %>
+<%= render 'todo_items/form' %>
 
 <%= link_to 'Edit', edit_list_path(@list) %> |
 <%= link_to 'Back', current_user %>
