--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "About") %>
 <h1>StaticPages#about</h1>
 <p>Organization</p>
 one of the most important reasons why we would recommend this app for you is the organization.
