--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, 'Register')%>
 <%= form_for(@user) do |f| %>
     <%= render 'shared/error_messages', object: f.object %>
     <%= f.label :name %>
