--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -1,7 +1,11 @@
-<%= form_for([@list, @list.cards.build]) do |f| %>
-    <%= f.text_field :description, placeholder: "Card description .." %>
-    <%= f.hidden_field :user_id, value: current_user.id %>
-    <%= f.hidden_field :list_id, value: @list.id %>
-    <%= f.submit "submit", class:"button" %>
+<%= form_for([@list.cards.build], remote: true) do |f| %>
+    <%= render 'shared/error_messages', object: f.object %>
+    <div class="input-group">
+        <%= f.text_field :description,  placeholder: "Card description...", class: 'input-group-field', id: dom_id(@list) %>
+        <%= f.hidden_field :list_id, value: @list.id %>
+        <div class="input-group-button">
+            <%= f.submit 'Create', class: 'button' %>
+        </div>
+    </div>
 <% end %>
 
