--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -1,27 +1,22 @@
-<%= form_for @list do |f| %>
-  <% if list.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(list.errors.count, "error") %> prohibited this list from being saved:</h2>
+<%# <%= form_for @list do |f| %1> %>
+<%#   <% if list.errors.any? %1> %>
+<%#     <div id="error_explanation"> %>
+<%#       <h2><%= pluralize(list.errors.count, "error") %1> prohibited this list from being saved:</h2> %>
 
-      <ul>
-      <% list.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%#       <ul> %>
+<%#       <% list.errors.full_messages.each do |message| %1> %>
+<%#         <li><%= message %1></li> %>
+<%#       <% end %1> %>
+<%#       </ul> %>
+<%#     </div> %>
+<%#   <% end %1> %>
 
-  <div class="field">
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-  </div>
+<%#   <div class="field"> %>
+<%#     <%= f.label :title %1> %>
+<%#     <%= f.text_field :title %1> %>
+<%#   </div> %>
 
-  <div class="field">
-    <%= f.label :description %>
-    <%= f.text_area :description %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+<%#   <div class="actions"> %>
+<%#     <%= f.submit %1> %>
+<%#   </div> %>
+<%# <% end %1> %>
