editing views for lists

--- a/app/views/lists/_list.html.erb
+++ b/app/views/lists/_list.html.erb
@@ -1,10 +1,9 @@
-<li id="list-<%= list.id %>">
-    <span class="title"><%= link_to list.title, list %></span>
-    <span class="description"><%= list.description %></span>
+<span id="list-<%= list.id %>">
+    <h3 class="title"><%= link_to list.title, list %></h3>
     <span class="timestamp">
         Created at <%= time_ago_in_words(list.created_at) %> ago.
         <% if current_user?(list.user) %>
             <%= link_to "delete", list, method: :delete, data: { confirm: "You sure?"  } %>
         <% end %>
     </span>
-</li>
+</span>
