removing the description input field

--- a/app/views/shared/_list_form.html.erb
+++ b/app/views/shared/_list_form.html.erb
@@ -1,11 +1,10 @@
-<div class="callout">
-    <h4>New List</h4>
-    <%= form_for(@list) do |f| %>
-        <%= render 'shared/error_messages', object: f.object %>
-        <div class="field">
-            <%= f.text_field :title, placeholder: "Todo list title" %>
-            <%= f.text_area :description, placeholder: "Add description..." %>
+<h4>New List</h4>
+<%= form_for(@list) do |f| %>
+    <%= render 'shared/error_messages', object: f.object %>
+    <div class="input-group">
+        <%= f.text_field :title,  placeholder: "New todo tist title", class: 'input-group-field', id: dom_id(@list) %>
+        <div class="input-group-button">
+            <%= f.submit 'Create', class: 'button' %>
         </div>
-        <%= f.submit "Create", class: "button" %>
-    <% end %>
-</div>
+    </div>
+<% end %>
